# postal

./: .gitattributes  .gitignore  Dockerfile  Notes  README.md  clearouts.sh  pyproject.toml  run_docker.sh
infrastructure/: .gitignore
infrastructure/control-node/: terragrunt.hcl
infrastructure/files/: initial_files.tar
infrastructure/managed-nodes/node1/: terragrunt.hcl
infrastructure/vpc/: main.tf  outputs.tf  terraform.tfstate  variables.tf
postal/: .gitignore  cluster.py  config.py  filter.py  latent.py  mkad.py  qc.py
postal/console/: application.py
postal/console/command/: cluster.py  filter.py  latent.py  mkad.py  qc.py
tests/: test_config.py  test_filter.py  test_qc.py
tests/console/command/: test_cluster.py  test_filter.py  test_latent.py  test_mkad.py  test_qc.py
tests/data/: cell_data.csv  cell_data_ref.csv  config.yaml  counts.csv  decode.hdf5  mac_config.yaml  manual_filter.yaml  parameters.yaml  parameters_mac.yaml  qc_summary_stats.csv  segmentation_stats.csv  test.h5ad  test_after_qc.h5ad  test_cluster.h5ad  test_latent.h5ad  test_qc.h5ad  transcript_data.csv
