[tool.poetry]
name = "postal"
version = "0.1.0"
description = ""
authors = ["Neil Tedeschi <ntedeschi@spatialgenomics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.0.1"
scanpy = "1.9.1"
scvi-tools = { git = "https://github.com/scverse/scvi-tools" }
black = "^22.12.0"
leidenalg = "^0.9.1"
matplotlib = "^3.6.2"
pillow = "^9.4.0"
flake8 = "^6.0.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
postal = "postal.console.application:run"

[tool.pytest.ini_options]
filterwarnings = [
	"error",
	"ignore::UserWarning",
	# note the use of single quote below to denote "raw" strings in TOML
	'ignore:FieldDescriptor\(\):DeprecationWarning',
	'ignore:distutils Version classes are deprecated:DeprecationWarning',
	'ignore:`pytorch_lightning.utilities.seed.seed_everything` has been deprecated:DeprecationWarning',
]
